<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".First"
    android:background="#080808"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="190dp"
        android:layout_height="109dp"
        android:layout_gravity="center"
        android:layout_marginTop="125dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chat_hub_logo" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="center"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/login"
            android:textColor="#080808"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="10dp"/>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#30ffffff"
            android:text="@string/register"
            android:textColor="#080808"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginTop="3dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/underscore"
        android:textColor="@color/white"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textColor="#0000ff"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="right"
        android:layout_marginRight="15dp"
        tools:ignore="RtlHardcoded" />
    
    
    
    


</LinearLayout>
