<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailVerifyActivity"
    android:background="#080808"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="190dp"
        android:layout_height="109dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chat_hub_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#30ffffff"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/checked_email_icon"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_mail"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_check_mail"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/resendEmailBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:backgroundTint="#4166f5"
            android:padding="8dp"
            android:text="@string/resend"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


        <Button
            android:id="@+id/logBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="#080808"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

</LinearLayout>