<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="#080808">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ciPickProImg"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/profile_icon"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>

    <ImageButton
        android:id="@+id/selectImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/plus_icon"
        android:backgroundTint="@color/white"
        android:onClick="selectImage"
        tools:ignore="UsingOnClickInXml"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/etRegName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#30ffffff"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="13dp"
            android:drawableStart="@drawable/user_icon"
            android:drawablePadding="13dp"
            android:inputType="textPersonName"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/etRegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#30ffffff"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="13dp"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="13dp"
            android:inputType="textEmailAddress"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tvVerifyEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/verify_email"
            android:textColor="#0000ff"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/etRegPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#30ffffff"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="13dp"
            android:drawableStart="@drawable/pass_icon"
            android:drawablePadding="13dp"
            android:inputType="textPassword"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/regBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/register"
            android:textColor="#080808"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="25dp"/>

    </LinearLayout>

</LinearLayout>